[tool.poetry]
name = "FGF_Info_Bot"
version = "1.0"
description = "Bot for Reddit that comments on submissions if they link to Steam games"
authors = ["Saulios"]
homepage = "https://reddit.com/r/FreeGameFindings"
repository = "https://github.com/Saulios/RedditSteamGameInfo"
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.2.2"
urllib3 = "^1.26.13"
bs4 = "^0.0.1"
prawcore = "^2.3.0"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.11.1"
praw = "^7.6.1"
humanfriendly = "10.0"
country-converter = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"